src/objects/LBI__ScoringRule__c.object
<CustomObject>
    <fields>
        <fullName>LBI__Action__c</fullName>
        <inlineHelpText>Score will use the selected model to score records that match the criteria for this rule.</inlineHelpText>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Score</fullName>
                </value>
                <value>
                    <fullName>Score &amp; Enrich</fullName>
                </value>
                <value>
                    <fullName>Enrich Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LBI__CriteriaLogic__c</fullName>
        <label>Criteria Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Model__c</fullName>
        <inlineHelpText>Select a model to use with this rule.</inlineHelpText>
        <label>Lattice Model</label>
        <referenceTo>LBI__Model__c</referenceTo>
        <relationshipLabel>Lattice Scoring Rules</relationshipLabel>
        <relationshipName>LatticeScoringRules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__Object__c</fullName>
        <inlineHelpText>Select an object that this rule will apply to. The rule will only affect objects with this record type based on the settings for the selected model.</inlineHelpText>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LBI__RuleName__c</fullName>
        <label>Rule Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Trigger__c</fullName>
        <inlineHelpText>Choose when this rule should run: when new records are created (create), when records are changed (update), or scoring is run manually (on demand)</inlineHelpText>
        <label>Trigger</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Create and Update</fullName>
                    <default>true</default>
                    <label>Create and Update</label>
                </value>
                <value>
                    <fullName>On Demand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LBI__isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Lattice Scoring Rule</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{000000000}</displayFormat>
        <label>Lattice Scoring Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Scoring Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>